--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,9 @@
       To create a production bundle, use `npm run build`.
     -->
     <script>
-      if ('serviceWorker' in navigator) {
+      if ('serviceWorker' in navigator && process.env.NODE_ENV === 'production') {
         window.addEventListener('load', function() {
-          navigator.serviceWorker.register('/service-worker.js');
+          navigator.serviceWorker.register('/pwa-weather/service-worker.js');
         });
       }
     </script>
